Fix loading bar going back at resume, add examples and dark mode

--- a/example/src/index.css
+++ b/example/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,400');
+
 body {
   margin: 0;
   padding: 0;
@@ -6,14 +8,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #b4b4b4;
+  background: #0a0a0a;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,400');
 
 body {
   margin: 0;
@@ -22,7 +24,7 @@ body {
 }
 
 .buttons-group {
-  padding-top: 8rem;
+  padding-top: 6rem;
   text-align: center;
 }
 
@@ -91,7 +93,7 @@ a:active {
 
 .btn.teal {
   color: white;
-  background-color: #00cfe2;
+  background-color: #0095a2;
   box-shadow: 0 0.5rem 2rem rgba(0, 255, 226, 0.5);
 }
 
@@ -112,8 +114,8 @@ a:active {
 .header {
   text-align: center;
   font-weight: 100;
-  font-size: 5rem;
-  margin-top: 3rem;
+  font-size: 4rem;
+  margin-top: 1rem;
 }
 
 .text-container {
@@ -125,22 +127,131 @@ a:active {
   display: inline-block;
   padding: 1rem 2rem;
   border-radius: 50px;
-  color: #222;
+  color: #d6d6d6;
   font-weight: 400;
   margin: 1em;
-  /* letter-spacing: 1.1px; */
-  /* box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 0.1); */
   transition: all 0.3s;
   cursor: pointer;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.25);
 }
 
 .package-install-text:hover {
-  /* transform: scale(1.1); */
   background: rgba(0, 255, 64, 0.2);
   border: 1px solid rgba(0, 173, 43, 0.4);
 }
 
 .github-buttons {
   margin-top: 2rem;
+}
+
+.btn.disabled {
+  background: #c7c7c7;
+  box-shadow: none;
+}
+
+.btn:hover.disabled {
+  background: #c7c7c7;
+  box-shadow: none;
+  cursor: not-allowed;
+}
+
+/*
+
+Atom One Dark by Daniel Gamage
+Original One Dark Syntax theme from https://github.com/atom/one-dark-syntax
+
+base:    #282c34
+mono-1:  #abb2bf
+mono-2:  #818896
+mono-3:  #5c6370
+hue-1:   #56b6c2
+hue-2:   #61aeee
+hue-3:   #c678dd
+hue-4:   #98c379
+hue-5:   #e06c75
+hue-5-2: #be5046
+hue-6:   #d19a66
+hue-6-2: #e6c07b
+
+*/
+
+.hljs {
+  display: block;
+  overflow-x: auto;
+  padding: 0.5em;
+  color: #abb2bf;
+}
+
+.hljs-comment,
+.hljs-quote {
+  color: #5c6370;
+  font-style: italic;
+}
+
+.hljs-doctag,
+.hljs-keyword,
+.hljs-formula {
+  color: #c678dd;
+}
+
+.hljs-section,
+.hljs-name,
+.hljs-selector-tag,
+.hljs-deletion,
+.hljs-subst {
+  color: #e06c75;
+}
+
+.hljs-literal {
+  color: #56b6c2;
+}
+
+.hljs-string,
+.hljs-regexp,
+.hljs-addition,
+.hljs-attribute,
+.hljs-meta-string {
+  color: #98c379;
+}
+
+.hljs-built_in,
+.hljs-class .hljs-title {
+  color: #e6c07b;
+}
+
+.hljs-attr,
+.hljs-variable,
+.hljs-template-variable,
+.hljs-type,
+.hljs-selector-class,
+.hljs-selector-attr,
+.hljs-selector-pseudo,
+.hljs-number {
+  color: #d19a66;
+}
+
+.hljs-symbol,
+.hljs-bullet,
+.hljs-link,
+.hljs-meta,
+.hljs-selector-id,
+.hljs-title {
+  color: #61aeee;
+}
+
+.hljs-emphasis {
+  font-style: italic;
+}
+
+.hljs-strong {
+  font-weight: bold;
+}
+
+.hljs-link {
+  text-decoration: underline;
+}
+
+.code-highlighter {
+  border-radius: 5px;
+  display: inline-block;
 }
